Fix extra spacing between some skills
Because the skill ladders are `inline-block` to maintain some space at the start/end of columns the margins of skills in adjacent ladders do not overlap, instead double the margin between adjacent skills in the same ladder so they're all consistent.  I tried removing the bottom margin of skills instead, but this then leaves no space at the bottom of a column.

--- a/themes/lt-osp/assets/sass/main.scss
+++ b/themes/lt-osp/assets/sass/main.scss
@@ -248,6 +248,9 @@ li ul {
     border-color: #999;
     border-width: 2px;
   }
+  & + .skill {
+    margin-top: .6em;
+  }
   & + .has-prerequisite {
     margin-top: 2em;
   }
